# cc-celeste-bridge

./: README.md  index.html  package-lock.json  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cccb_error.rs  main.rs  mod_statuses.rs  mod_tcp_conn.rs  overlay_ws_conn.rs  queues.rs  tcp_conn_state.rs  ws_conn_state.rs
src/lib/: GameConnectionStatus.svelte  Greet.svelte  ServerConnectionStatus.svelte
